Fix root font-size at 17.5px for consistent spacing

--- a/_sass/custom/_navigation.scss
+++ b/_sass/custom/_navigation.scss
@@ -16,6 +16,6 @@ html[data-theme="dark"] .greedy-nav .visible-links a:before {
 }
 @media (min-width: 900px) and (max-width: 1024px) {
   .greedy-nav .visible-links li:nth-child(2) a {
-    margin-left: -1rem;
+    margin-left: -1.15rem;
   }
 }
